--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,14 @@
-[pep8]
+[pycodestyle]
 max-line-length = 120
+exclude = .vscode, .mypy_cache, .git, .svn, CVS, .bzr, .hg
 
 [flake8]
 max-line-length = 120
+exclude = .vscode, .mypy_cache, .git, .svn, CVS, .bzr, .hg
 
 [yapf]
 max-line-length = 120
 based_on_style = pep8
 spaces_before_comment = 4
 split_before_logical_operator = true
+exclude = .vscode, .mypy_cache, .git, .svn, CVS, .bzr, .hg
