--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ exclude = .vscode, .mypy_cache, .git, .svn, CVS, .bzr, .hg
 
 [flake8]
 max-line-length = 120
-exclude = .vscode, .mypy_cache, .git, .svn, CVS, .bzr, .hg
+# exclude = .vscode, .mypy_cache, .git, .svn, CVS, .bzr, .hg
 
 [yapf]
 max-line-length = 120
