--- a/setup.cfg
+++ b/setup.cfg
@@ -7,8 +7,7 @@ max-line-length = 120
 # exclude = .vscode, .mypy_cache, .git, .svn, CVS, .bzr, .hg
 
 [yapf]
-max-line-length = 120
+column_limit = 120
 based_on_style = pep8
 spaces_before_comment = 4
 split_before_logical_operator = true
-exclude = .vscode, .mypy_cache, .git, .svn, CVS, .bzr, .hg
