--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,6 @@ repos:
     hooks:
       - id: isort
   - repo: https://github.com/pre-commit/mirrors-yapf
-    rev: '' # Use the sha / tag you want to point at
+    rev: v0.28.0 # Use the sha / tag you want to point at
     hooks:
       - id: yapf
